# mardiclient

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
mardiclient/: MardiClient.py  MardiEntities.py  __init__.py  entity_mappings_prod.json  entity_mappings_staging.json  mardi_client.py  mardi_config.py  mardi_entities.py  mathml_datatype.py  utils.py
mardiclient/tests/: test_mardi_client.py
